# ccsp-ssam-agent

./: Makefile.am  configure.ac
certs/: sam_key_1.pem  sam_key_2.pem  ssam_0_1.pem  ssam_0_2.pem  ssam_0_3.pem  ssam_9_1.pem  ssam_9_2.pem  ssam_9_3.pem
scripts/: SsamAgent.xml
source/: Makefile.am
source/SsamComponent/: Makefile.am  cosa_apis_ssamagentplugin.c  cosa_apis_ssamagentplugin.h  plugin_main.c  plugin_main.h  ssp_action.c  ssp_global.h  ssp_internal.h  ssp_main.c  ssp_messagebus_interface.c  ssp_messagebus_interface.h
